WebCore:

2009-07-23  Darin Adler  <darin@apple.com>

        Reviewed by Brady Eidson.

        URL appears in back/forward button menu instead of title for items with custom representation
        https://bugs.webkit.org/show_bug.cgi?id=27586
        rdar://problem/5060337

        * WebCore.base.exp: Exported DocumentLoader::setTitle for use by Mac WebKit.
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::didChangeTitle): Tightened code to check if the document
        loader is the correct one; previously this would never happen because we'd
        commit the load before any title changes could be registered, but now we can
        encounter a case where we get a title during a provisional load.

WebKit/mac:

2009-07-23  Darin Adler  <darin@apple.com>

        Reviewed by Brady Eidson.

        URL appears in back/forward button menu instead of title for items with custom representation
        https://bugs.webkit.org/show_bug.cgi?id=27586
        rdar://problem/5060337

        The problem is that DocumentLoader expects to store a title, but for custom representations
        it is never passed to the document loader.

        * WebView/WebDataSource.mm:
        (-[WebDataSource _makeRepresentation]): Added a call to DocumentLoader::setTitle.
        Works as long as the title does not change during the document's lifetime, which
        is good enough for the simple cases in Safari.



Canonical link: https://commits.webkit.org/37911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46298 268f45cc-cd09-0410-ab3c-d52691b4dbfc